# hello_kitti

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
apps/: CMakeLists.txt
apps/comma_player/: CMakeLists.txt
apps/comma_player/src/: main.cpp
apps/kitti_detections/: CMakeLists.txt
apps/kitti_detections/src/: main.cpp
apps/kitti_lidar_depth/: CMakeLists.txt
cmake/: module.cmake  python.cmake
data/: .gitignore  CMakeLists.txt  comma_connect_client.py  download_kitty.py
models/yolo/: CMakeLists.txt  yolo_export_model.py  yolo_generate_classnames_header.py
models/yolo/yolov8n-seg.mlpackage/: Manifest.json
models/yolo/yolov8n-seg.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/yolo/yolov8n.mlpackage/: Manifest.json
models/yolo/yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
modules/: CMakeLists.txt
modules/comma/: CMakeLists.txt
modules/comma/include/comma/: comma.hpp  utils.hpp
modules/comma/src/: comma.cpp  utils.cpp
modules/comma_player/src/: main.cpp
modules/common/: CMakeLists.txt
modules/common/include/common/: file.hpp  opencv_utils.hpp  projection.hpp  string.hpp
modules/common/src/: projection.cpp
modules/kitti/: CMakeLists.txt
modules/kitti/include/kitti/: kitti_utils.hpp
modules/kitti/src/: kitti_utils.cpp
modules/kitti_lidar_depth/src/: main.cpp
modules/kitti_player/: CMakeLists.txt
modules/kitti_player/src/: main.cpp
modules/kitti_stereo_depth/: CMakeLists.txt
modules/kitti_stereo_depth/src/: main.cpp
modules/lidar/: CMakeLists.txt
modules/lidar/include/lidar/: lidar.hpp  visualize.hpp
modules/lidar/src/: lidar.cpp  visualize.cpp
modules/ml/: CMakeLists.txt
modules/ml/include/ml/: detect_ml_model.hpp  ml_model.hpp  ml_runtime.hpp
modules/ml/include/ml/yolo/: yolo_classes.hpp
modules/ml/src/: detect_ml_model.cpp  ml_model.cpp  ml_runtime.cpp
modules/stereo/: CMakeLists.txt
modules/stereo/include/stereo/: depth_map.hpp  disparity.hpp
modules/stereo/src/: depth_map.cpp  disparity.cpp
scripts/: yolov8-segmentation-onnx.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/_test/: test.cpp  test.hpp
test/comma/: comma.test.cpp  utils.test.cpp
test/common/: opencv_utils.test.cpp  projection.test.cpp
test/fixtures/comma/: qcamera.ts  qlog.bz2  raw.txt  raw.txt.bz2
test/fixtures/lidar/00_basic/: .gitignore  lidar_points_cam.npy
test/fixtures/ml/yolov8-seg/: .gitignore
test/fixtures/stereo/00_basic/: .gitignore  K_right.txt  T_left.txt  T_right.txt
test/kitti/: CMakeLists.txt  kitti_utils.test.cpp
test/lidar/: CMakeLists.txt  lidar.test.cpp
test/ml/: CMakeLists.txt  detect_ml_model.test.cpp  ml_model.test.cpp
test/stereo/: CMakeLists.txt  depth_e2e.test.cpp  depth_map.test.cpp  disparity.test.cpp  stereo_test_utils.hpp
yolo/: export.py  requirements.txt
yolo/yolov8n.mlpackage/: Manifest.json
yolo/yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
